fixed action in form
redirecting to profile page when requirements are met

--- a/authentication/index.html
+++ b/authentication/index.html
@@ -33,8 +33,7 @@
               <h1 class="text-center form-title mb-2 text-primary">Log in</h1>
 
               <!-- submission form data -->
-              <form action="../profile/index.html" method="post">
-                <p class="m-0 text-primary">E-mail adress</p>
+              <form action="/profile/index.html" method="post">                <p class="m-0 text-primary">E-mail adress</p>
                 <div class="form-floating mb-1 text-light">
                   <input
                     type="email"
