--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
               <h1 class="text-center form-title mb-2 mt-3 text-primary">Welcome</h1>
 
 
-                <div class="container d-flex align-items-center justify-content-center">
+                <div class="container d-flex row align-items-center justify-content-center">
 
                     <a href="/authentication/index.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
-                        Enter to log in
+                        Log in
+                      </a>
+                      <a href="/sign-up/sign-up.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
+                        Sign up
                       </a>
               </div>
               </form>
