--- a/profile/index.html
+++ b/profile/index.html
@@ -125,6 +125,37 @@
       </div>
     </div>
 
+    <!-- create a post -->
+    <div class="container mt-5 mb-4">
+      <div class="row">
+        <div class="d-flex align-items-center justify-content-center">
+          <h4>Create a new Post</h4>
+        </div>
+        <div class="card-body mx-3">
+          <form>
+            <div class="mb-3">
+              <label for="postText" class="form-label"></label>
+              <textarea
+                class="form-control border-secondary"
+                id="postText"
+                rows="3"
+                placeholder="Write your post here..."
+              ></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="postImage" class="form-label">Image:</label>
+              <input type="file" class="form-control-file" id="postImage" />
+            </div>
+            <div class="d-grid gap-2">
+              <button class="btn btn-outline-secondary" type="button">
+                Button
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <!-- posts section -->
     <div class="container mb-5">
       <div class="row">
