--- a/authentication/index.html
+++ b/authentication/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <script src="/js/auth/index.mjs" type="module" defer></script>
+    <script src="/scripts/pages/index.mjs" type="module" defer></script>
     <title>Authentication page Boho App</title>
   </head>  
   
