--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -36,7 +36,7 @@
                 <h1 class="text-center form-title mb-2 text-primary">Sign up</h1>
   
                 <!-- submission form data -->
-                <form id="regForm" method="post" >               
+                <form id="regForm" action="/authentication/index.html" method="post" >               
                   <p class="m-0 text-primary">Username</p>
                   <div class="form-floating mb-3 text-light opacity-50">
                     <input
