edited styling in HTML files, added prettier format on save

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <title>Index Boho App</title>
+    <title>Index | Boho Styles</title>
   </head>  
   
   <body class="bg-img min-vh-100 w-100">
+    <header>
     <nav class="navbar mt-3">
     </nav>
     <div class="container">
           <img class="logo img-fluid max-width mt-5" src="/img/logo-boho.png" alt="logo of Boho styles">
 </div>
+    </header>
+    <main>
     <!-- form validation -->
     <div class="container mb-1">
       <div class="row align-items-center justify-content-center">
@@ -48,7 +51,7 @@
         </div>
       </div>
     </div>
-
+  </main>
     <footer class="footer footer-expand fixed-bottom">
       <div class="container">
         <div class="d-flex justify-content-center align-items-center">
