--- a/authentication/index.html
+++ b/authentication/index.html
@@ -8,17 +8,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="../dist/css/index.css" />
+    <link rel="stylesheet" href="/dist/css/index.css" />
     <script src="../scripts/pages/login.mjs" type="module" defer></script>
-    <title>Log in page Boho App</title>
+    <title>Log in | Boho Styles</title>
   </head>  
   
   <body class="bg-img min-vh-100 w-100">
+    <header>
     <nav class="navbar mt-3">
     </nav>
     <div class="container">
           <img class="logo img-fluid max-width mt-5" src="/img/logo-boho.png" alt="logo of Boho styles">
 </div>
+</header>
+<main>
     <!-- form validation -->
     <div class="container mb-1">
       <div class="row align-items-center justify-content-center">
@@ -79,7 +82,7 @@
         </div>
       </div>
     </div>
-
+  </main>
     <footer class="footer footer-expand fixed-bottom">
       <div class="container">
         <div class="d-flex justify-content-center align-items-center">
@@ -89,6 +92,5 @@
     </footer>
     
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  </body>
 </html>
