--- a/feed/index.html
+++ b/feed/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,6 +14,8 @@
   </head>
 
   <body class="bg-primary">
+    
+    <header>
     <nav class="navbar navbar-expand-lg bg-secondary shadow">
       <div class="container">
         <a class="navbar-brand" href="/profile/">
@@ -26,6 +28,9 @@
           />
         </a>
         <div class="ml-auto d-flex align-items-center">
+
+        </header>
+        <main>
           <!-- Feed Button -->
           <a
             class="btn btn-outline-primary shadow-sm mx-1"
@@ -46,45 +51,6 @@
       </div>
     </nav>
 
-    <!-- Bottom navbar menu (@chatGPT) -->
-    <nav
-      class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary"
-    >
-      <div class="container justify-content-around">
-        <ul class="navbar-nav">
-          <div class="icon-container d-flex align-items-center">
-            <p
-              class="h6 copyright d-none d-md-block d-lg-block m-3 align-items-center text-primary"
-            >
-              &copy; 2023 Boho Styles
-            </p>
-            <li class="nav-item">
-              <a class="nav-link" href="../profile/index.html">
-                <i
-                  class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"
-                ></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i
-                  class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"
-                ></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i
-                  class="fas fa-search fa-2x d-md-none d-lg-none text-primary"
-                ></i>
-              </a>
-            </li>
-          </div>
-        </ul>
-      </div>
-    </nav>
 
     <div
       class="container-fluid d-flex align-items-center justify-content-center mt-3"
@@ -245,10 +211,51 @@
         </div>
       </div>
     </div>
+    <!-- Bottom navbar menu (@chatGPT) -->
+    <nav
+      class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary"
+    >
+      <div class="container justify-content-around">
+        <ul class="navbar-nav">
+          <div class="icon-container d-flex align-items-center">
+            <p
+              class="h6 copyright d-none d-md-block d-lg-block m-3 align-items-center text-primary"
+            >
+              &copy; 2023 Boho Styles
+            </p>
+            <li class="nav-item">
+              <a class="nav-link" href="../profile/index.html">
+                <i
+                  class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"
+                ></i>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i
+                  class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"
+                ></i>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i
+                  class="fas fa-search fa-2x d-md-none d-lg-none text-primary"
+                ></i>
+              </a>
+            </li>
+          </div>
+        </ul>
+      </div>
+    </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+  </main>
   </body>
+
 </html>
