--- a/profile/index.html
+++ b/profile/index.html
@@ -9,19 +9,21 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <title>Profile page</title>
+    <title>Profile | Boho Styles</title>
   </head>
 
   <body class="bg-primary">
+    <header>
     <nav class="navbar navbar-expand-lg bg-secondary shadow">
       <div class="container">
-        <img
-          src="../img/logo-boho.png"
-          alt="logo Boho Styles"
-          class="img-fluid"
-          width="150px"
-          height="auto"
-        />
+        <a href="/feed/index.html">
+          <img
+            src="../img/logo-boho.png"
+            alt="logo Boho Styles"
+            class="img-fluid"
+            width="150px"
+            height="auto"
+        /></a>
         <div class="ml-auto d-flex align-items-center">
           <!-- Profile Button -->
           <a
@@ -42,250 +44,254 @@
         </div>
       </div>
     </nav>
+  </header>
+    <main>
+      <!-- profile container -->
 
-    <!-- Bottom navbar menu (@chatGPT) -->
-    <nav
-      class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary"
-    >
-      <div class="container justify-content-around">
-        <ul class="navbar-nav">
-          <div class="icon-container d-flex align-items-center">
-            <p
-              class="h6 copyright d-none d-md-block d-lg-block m-3 align-items-center text-primary"
-            >
-              &copy; 2023 Boho Styles
-            </p>
-            <li class="nav-item">
-              <a class="nav-link" href="../profile/index.html">
-                <i
-                  class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"
-                ></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i
-                  class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"
-                ></i>
-              </a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i
-                  class="fas fa-search fa-2x d-md-none d-lg-none text-primary"
-                ></i>
-              </a>
-            </li>
-          </div>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- profile container -->
-
-    <div class="container-fluid">
-      <div class="row">
-        <div
-          class="profile-container mb-3 w-100 bg-primary d-flex flex-column justify-content-center align-items-center"
-        >
-          <!-- Profile Section -->
+      <div class="container-fluid">
+        <div class="row">
           <div
-            class="profile-section mt-5 mb-3 d-flex flex-column justify-content-center align-items-center"
+            class="profile-container mb-3 w-100 bg-primary d-flex flex-column justify-content-center align-items-center"
           >
-            <img
-              src="/img/profile.jpg"
-              alt="Profile Image"
-              class="profile-image mb-2 shadow rounded-circle object-fit-contain border border-2"
-              width="200px"
-              height="200px"
-            />
-            <h2 class="mb-3 display-5 text-secondary">User Name</h2>
-            <div class="followers d-flex">
-              <p class="h6 mb-2 text-light">Following: 100 | Followers: 200</p>
+            <!-- Profile Section -->
+            <div
+              class="profile-section mt-5 mb-3 d-flex flex-column justify-content-center align-items-center"
+            >
+              <img
+                src="/img/profile.jpg"
+                alt="Profile Image"
+                class="profile-image mb-2 shadow rounded-circle object-fit-contain border border-2"
+                width="200px"
+                height="200px"
+              />
+              <h2 class="mb-3 display-5 text-secondary">User Name</h2>
+              <div class="followers d-flex">
+                <p class="h6 mb-2 text-light">
+                  Following: 100 | Followers: 200
+                </p>
+              </div>
             </div>
-          </div>
 
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="d-flex justify-content-center align-items-center">
-                <!-- follow btn -->
-                <button
-                  type="button"
-                  class="btn btn-secondary shadow-sm mb-5"
-                  disabled
-                >
-                  Follow
-                </button>
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="d-flex justify-content-center align-items-center">
+                  <!-- follow btn -->
+                  <button
+                    type="button"
+                    class="btn btn-secondary shadow-sm mb-5"
+                    disabled
+                  >
+                    Follow
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- create a post -->
-    <div class="container mt-5 mb-4">
-      <div class="row">
-        <div class="d-flex align-items-center justify-content-center">
-          <h4>Create a new Post</h4>
-        </div>
-        <div class="card-body mx-3">
-          <form>
-            <div class="mb-3">
-              <label for="postText" class="form-label"></label>
-              <textarea
-                class="form-control border-secondary"
-                id="postText"
-                rows="3"
-                placeholder="Write your post here..."
-              ></textarea>
-            </div>
-            <div class="mb-3">
-              <label for="postImage" class="form-label">Image:</label>
-              <input type="file" class="form-control-file" id="postImage" />
-            </div>
-            <div class="d-grid gap-2">
-              <button class="btn btn-outline-secondary" type="button">
-                Button
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <!-- posts section -->
-    <div class="container mb-5">
-      <div class="row">
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 1"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 1</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p>
-            </div>
+      <!-- create a post -->
+      <div class="container mt-5 mb-4">
+        <div class="row">
+          <div class="d-flex align-items-center justify-content-center">
+            <h4>Create a new Post</h4>
           </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 2"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 2</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 4"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 3</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 9 mins ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 4"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 4</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 1 day ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 5"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 5</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 days ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 1"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 6</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 4 days ago</small>
-              </p>
-            </div>
+          <div class="card-body mx-3">
+            <form>
+              <div class="mb-3">
+                <label for="postText" class="form-label"></label>
+                <textarea
+                  class="form-control border-secondary"
+                  id="postText"
+                  rows="3"
+                  placeholder="Write your post here..."
+                ></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="postImage" class="form-label">Image:</label>
+                <input type="file" class="form-control-file" id="postImage" />
+              </div>
+              <div class="d-grid gap-2">
+                <button class="btn btn-outline-secondary" type="button">
+                  Button
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
-    </div>
+
+      <!-- posts section -->
+      <div class="container mb-5">
+        <div class="row">
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="card pr-2 pl-2">
+              <img
+                src="../img/post-1.jpg"
+                class="img-thumbnail"
+                alt="post image 1"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post title 1</h5>
+                <p class="card-text text-truncate">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="card pr-2 pl-2">
+              <img
+                src="../img/post-1.jpg"
+                class="img-thumbnail"
+                alt="post image 2"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post title 2</h5>
+                <p class="card-text text-truncate">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="card pr-2 pl-2">
+              <img
+                src="../img/post-1.jpg"
+                class="img-thumbnail"
+                alt="post image 4"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post title 3</h5>
+                <p class="card-text text-truncate">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 9 mins ago</small>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-4 mb-3">
+            <div class="card pr-2 pl-2">
+              <img
+                src="../img/post-1.jpg"
+                class="img-thumbnail"
+                alt="post image 4"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post title 4</h5>
+                <p class="card-text text-truncate">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 1 day ago</small>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="card pr-2 pl-2">
+              <img
+                src="../img/post-1.jpg"
+                class="img-thumbnail"
+                alt="post image 5"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post title 5</h5>
+                <p class="card-text text-truncate">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 3 days ago</small>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="card pr-2 pl-2">
+              <img
+                src="../img/post-1.jpg"
+                class="img-thumbnail"
+                alt="post image 1"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Post title 6</h5>
+                <p class="card-text text-truncate">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+                <p class="card-text">
+                  <small class="text-muted">Last updated 4 days ago</small>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottom navbar menu (@chatGPT) -->
+      <nav
+        class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary"
+      >
+        <div class="container justify-content-around">
+          <ul class="navbar-nav">
+            <div class="icon-container d-flex align-items-center">
+              <p
+                class="h6 copyright d-none d-md-block d-lg-block m-3 align-items-center text-primary"
+              >
+                &copy; 2023 Boho Styles
+              </p>
+              <li class="nav-item">
+                <a class="nav-link" href="../profile/index.html">
+                  <i
+                    class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"
+                  ></i>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i
+                    class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"
+                  ></i>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <i
+                    class="fas fa-search fa-2x d-md-none d-lg-none text-primary"
+                  ></i>
+                </a>
+              </li>
+            </div>
+          </ul>
+        </div>
+      </nav>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
