--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -11,15 +11,18 @@
     <link rel="stylesheet" href="../dist/css/index.css" />
     <script src="/scripts/pages/registration.mjs" type="module" defer></script>
 
-    <title>Sign up Boho App</title>
+    <title>Sign up | Boho Styles</title>
   </head>  
   
   <body class="bg-img min-vh-100 w-100">
+    <header>
     <nav class="navbar mt-3">
     </nav>
     <div class="container">
           <img class="logo img-fluid max-width mt-5" src="/img/logo-boho.png" alt="logo of Boho styles">
 </div>
+</header>
+<main>
     <!-- form validation -->
     <div class="container mb-1">
         <div class="row align-items-center justify-content-center">
@@ -118,6 +121,8 @@
           </div>
         </div>
       </div>
+    </main>
+</body>
 
     <footer class="footer footer-expand fixed-bottom">
       <div class="container">
@@ -128,5 +133,5 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+  
 </html>
