styling bootstrap h1 and text-colors

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </div>
     </header>
     <main>
+      
     <!-- form validation -->
     <div class="container mb-1">
       <div class="row align-items-center justify-content-center">
@@ -33,12 +34,12 @@
         <div class="col-12 col-md-10 mx-0">
           <div class="form-container py-4 d-flex justify-content-center">
             <div class="form-wrapper">
-              <h1 class="text-center form-title mb-2 mt-3 text-primary">Welcome</h1>
+              <h1 class="text-center form-title mb-2 mt-3 text-dark">Welcome</h1>
 
 
                 <div class="container d-flex row align-items-center justify-content-center">
 
-                    <a href="/authentication/index.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
+                    <a href="/authentication" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
                         Log in
                       </a>
                       <a href="/sign-up/sign-up.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
