--- a/profile/index.html
+++ b/profile/index.html
@@ -37,7 +37,7 @@
           <!-- Feed Button -->
           <a
             class="btn btn-outline-primary shadow-sm mx-1"
-            href="../feed/index.html"
+            href="/feed"
             role="button"
             >Feed</a
           >
@@ -64,9 +64,9 @@
                 width="200px"
                 height="200px"
               />
-              <h2 class="mb-3 display-5 text-secondary">User Name</h2>
+              <h1 class="mb-3 display-5 text-secondary">User Name</h1>
               <div class="followers d-flex">
-                <p class="h6 mb-2 text-light">
+                <p class="h6 mb-2 text-dark">
                   Following: 100 | Followers: 200
                 </p>
               </div>
@@ -94,7 +94,7 @@
       <div class="container mt-5 mb-4">
         <div class="row">
           <div class="d-flex align-items-center justify-content-center">
-            <h4>Create a new Post</h4>
+            <h2>Create a new Post</h2>
           </div>
           <div class="card-body mx-3">
             <form>
@@ -265,7 +265,7 @@
                 &copy; 2023 Boho Styles
               </p>
               <li class="nav-item">
-                <a class="nav-link" href="../profile/index.html">
+                <a class="nav-link" href="/profile">
                   <i
                     class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"
                   ></i>
