--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -39,7 +39,7 @@
                 <h1 class="text-center form-title mb-2 text-primary">Sign up</h1>
   
                 <!-- submission form data -->
-                <form id="regForm" action="/authentication/index.html" method="post" >               
+                <form id="regForm" action="/authentication" method="post" >               
                   <p class="m-0 text-primary">Username</p>
                   <div class="form-floating mb-3 text-light opacity-50">
                     <input
@@ -111,7 +111,7 @@
                     Sign in
                   </button>
                 </div>
-                <a href="/authentication/index.html" class="d-flex align-items-center justify-content-center btn btn-sm btn-outline-primary shadow">
+                <a href="/authentication" class="d-flex align-items-center justify-content-center btn btn-sm btn-outline-primary shadow">
                   Log in
                 </a>
                 </form>
