styling btns and correcting hyperlinks

--- a/authentication/index.html
+++ b/authentication/index.html
@@ -72,10 +72,14 @@
                 </div>
                 
                   <div class="container d-flex align-items-center justify-content-center">  
-                <button type="submit" class="btn btn-sm btn-outline-primary px-4 py-1 shadow p-3 mb-5">
+                <button type="submit" class="btn btn-sm btn-outline-dark px-4 py-1 shadow p-3 mb-2 mt-4">
                   Log in
                 </button>
+              
               </div>
+              <a href="../sign-up/sign-up.html">
+              <p class="d-flex align-items-center justify-content-center text-dark">Register here</p>
+            </a>  
               </form>
             </div>
           </div>
