display username and email login

--- a/feed/index.html
+++ b/feed/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Log in</h1>
+    <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Feed</h1>
 
 </header>
 
