fetched allposts and single posts, render all posts

--- a/feed/index.html
+++ b/feed/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <script src="../scripts/posts/posts.mjs" type="module" defer></script>
+    <script src="../scripts/posts/allPosts.mjs" type="module" defer></script>
     <title>Feed | Boho Styles</title>
   </head>
 
@@ -50,7 +50,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Feed</h1>
+    <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Log in</h1>
 
 </header>
 
