fetched single posts by its ID from endpoint

--- a/single-post/singlePost.html
+++ b/single-post/singlePost.html
@@ -32,20 +32,20 @@
 
         
        
-          <!-- Feed Button -->
-          <a
+          <!-- Profile Button -->
+        <a
             class="btn btn-outline-primary shadow-sm mx-1"
             href="/profile"
             role="button"
             >Profile</a
           >
 
-          <!-- Profile Button -->
+
+          <!-- Feed Button -->
           <a
-            class="btn-profile btn btn-outline-light d-flex disabled shadow-sm"
-            aria-disabled="true"
+            class="btn btn-outline-primary shadow-sm mx-1"
+            href="/feed/index.html"
             role="button"
-            data-bs-toggle="button"
             >Feed</a
           >
         </div>
@@ -67,14 +67,11 @@
               class="img-thumbnail"
               alt="post image 1"
             />
-            <div class="card-body">
-              <h5 class="card-title">Post title 1</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+            <div id="card-body">
+              <h2 id="singleCard-title"></h2>
+              <p id="singleCard-body text-truncate">
               </p>
-              <p class="card-text">
+              <p id="singleCard-text">
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p>
             </div>
