fetched and displayed media, uploaded and created from the endpoint

--- a/single-post/singlePost.html
+++ b/single-post/singlePost.html
@@ -63,16 +63,20 @@
         <div class="col-12 col-sm-4 mb-3">
           <div class="card pr-2 pl-2">
             <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
+              src=""
+              id="card-media"
               alt="post image 1"
             />
-            <div id="card-body">
-              <h2 id="singleCard-title"></h2>
-              <p id="singleCard-body text-truncate">
+            <div id="card-container">
+              <h2 id="card-title"></h2>
+              <p id="card-body" class="text-truncate">
               </p>
-              <p id="singleCard-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <p id="card-text">
+                <small id="card-created" class="text-muted"></small>
+                <small id="card-updated" class="text-muted"></small>
+                <small id="card-tags"></small>
+
+
               </p>
             </div>
           </div>
