--- a/feed/index.html
+++ b/feed/index.html
@@ -85,135 +85,33 @@
     </div>
 
     <!-- posts section -->
-    <div class="container mb-5 mt-5">
-      <div class="row">
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 1"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 1</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
+   <!-- posts section -->
+   <div id="singlePostContainer" class="container mb-5 mt-5" >
+    <div class="row">
+      <div class="col-12 col-sm-4 mb-3">
+        <div class="card pr-2 pl-2">
+          <img
+            src=""
+            id="card-media"
+            alt="post image 1"
+          />
+          <div id="card-container">
+            <h2 id="card-title"></h2>
+            <p id="card-body" class="text-truncate">
+            </p>
+            <p id="card-text">
+              <small id="card-created" class="text-muted"></small>
+              <small id="card-updated" class="text-muted"></small>
+              <small id="card-tags"></small>
 
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 2"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 2</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
 
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 4"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 3</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 9 mins ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 4"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 4</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 1 day ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 5"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 5</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 days ago</small>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 col-sm-4 mb-3">
-          <div class="card pr-2 pl-2">
-            <img
-              src="../img/post-1.jpg"
-              class="img-thumbnail"
-              alt="post image 1"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Post title 6</h5>
-              <p class="card-text text-truncate">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 4 days ago</small>
-              </p>
-            </div>
+            </p>
           </div>
         </div>
       </div>
+
     </div>
+  </div>
     <!-- Bottom navbar menu (@chatGPT) -->
     <nav
       class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary"
