--- a/feed/index.html
+++ b/feed/index.html
@@ -84,32 +84,23 @@
       </div>
     </div>
 
-    <!-- posts section -->
    <!-- posts section -->
-   <div id="singlePostContainer" class="container mb-5 mt-5" >
+   <div class="singlePostContainer container mb-5 mt-5">
     <div class="row">
       <div class="col-12 col-sm-4 mb-3">
         <div class="card pr-2 pl-2">
-          <img
-            src=""
-            id="card-media"
-            alt="post image 1"
-          />
-          <div id="card-container">
-            <h2 id="card-title"></h2>
-            <p id="card-body" class="text-truncate">
-            </p>
-            <p id="card-text">
-              <small id="card-created" class="text-muted"></small>
-              <small id="card-updated" class="text-muted"></small>
-              <small id="card-tags"></small>
-
-
+          <img src="" class="card-media" alt="post image 1" />
+          <div class="card-container">
+            <h2 class="card-title text-dark"></h2>
+            <p class="card-body text-dark"></p>
+            <p class="card-text">
+              <small class="card-created text-muted"></small>
+              <small class="card-updated text-muted"></small>
+              <small class="card-tags text-muted"></small>
             </p>
           </div>
         </div>
       </div>
-
     </div>
   </div>
     <!-- Bottom navbar menu (@chatGPT) -->
