--- a/feed/index.html
+++ b/feed/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' https://scontent.fsvg2-1.fna.fbcdn.net/ http: https:">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -89,7 +89,7 @@
     <div class="row">
       <div class="col-12 col-sm-4 mb-3">
         <div class="card pr-2 pl-2">
-          <img src="" class="card-media" alt="post image 1" />
+          <img src="https://example.com/image.jpg" alt="Post Image">
           <div class="card-container">
             <h2 class="card-title text-dark"></h2>
             <p class="card-body text-dark"></p>
@@ -100,10 +100,13 @@
             </p>
           </div>
         </div>
+      </div>    
       </div>
     </div>
   </div>
-    <!-- Bottom navbar menu (@chatGPT) -->
+
+  
+  </button>    <!-- Bottom navbar menu (@chatGPT) -->
     <nav
       class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary"
     >
