renamed to index pages in folders, structuring files

--- a/authentication/index.html
+++ b/authentication/index.html
@@ -77,7 +77,7 @@
                 </button>
               
               </div>
-              <a href="../sign-up/sign-up.html">
+              <a href="/register/index.html">
               <p class="d-flex align-items-center justify-content-center text-dark">Register here</p>
             </a>  
               </form>
