--- a/feed/index.html
+++ b/feed/index.html
@@ -25,7 +25,20 @@
           />
         </a>
         <div class="ml-auto d-flex align-items-center">
-          <!-- Feed Button -->
+          <!-- login and register Button -->
+          <a
+          class="btn shadow-sm mx-1 text-primary"
+          href="/authentication/index.html"
+          role="button"
+          >Login</a
+        >
+        <a
+        class="btn text-primary shadow-sm mx-1"
+        href="/register/index.html"
+        role="button"
+        >Register</a
+      >
+          <!-- Feed and profile Button -->
           <a
             class="btn btn-outline-primary shadow-sm mx-1"
             href="../profile/index.html"
@@ -33,7 +46,6 @@
             >Profile</a
           >
 
-          <!-- Profile Button -->
           <a
             class="btn-profile btn btn-outline-light d-flex disabled shadow-sm"
             aria-disabled="true"
