--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="/authentication" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
                         Log in
                       </a>
-                      <a href="/sign-up/sign-up.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
+                      <a href="/register/index.html" class="btn btn-sm btn-outline-primary px-4 py-3 shadow p-3 mb-5">
                         Sign up
                       </a>
               </div>
