--- a/profile/index.html
+++ b/profile/index.html
@@ -26,7 +26,20 @@
             height="auto"
         /></a>
         <div class="ml-auto d-flex align-items-center">
-          <!-- Profile Button -->
+               <!-- login and register Button -->
+               <a
+               class="btn shadow-sm mx-1 text-primary"
+               href="/authentication/index.html"
+               role="button"
+               >Login</a
+             >
+             <a
+             class="btn text-primary shadow-sm mx-1"
+             href="/register/index.html"
+             role="button"
+             >Register</a
+           >
+          <!-- Profile and Feed Button -->
           <a
             class="btn-profile btn btn-outline-light d-flex disabled shadow-sm"
             aria-disabled="true"
@@ -35,7 +48,6 @@
             >Profile</a
           >
 
-          <!-- Feed Button -->
           <a
             class="btn btn-outline-primary shadow-sm mx-1"
             href="/feed"
