trying to figure out how to create post with accesstoken

--- a/feed/index.html
+++ b/feed/index.html
@@ -9,6 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="../dist/css/index.css" />
+    <script src="/scripts/posts/get.mjs" type="module" defer></script>
+
     <title>Feed page</title>
   </head>
 
