--- a/profile/index.html
+++ b/profile/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="../dist/css/index.css" />
     <script src="/scripts/posts/create.mjs" type="module" defer></script>
+    <script src="/scripts/index.mjs" type="module" defer></script>
     <title>Profile | Boho Styles</title>
   </head>
 
