fetched all posts from api endpoint

--- a/single-post/edit.html
+++ b/single-post/edit.html
@@ -7,9 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="../dist/css/index.css" />
-  <script src="../scripts/pages/singlePost.mjs" type="module" defer></script>
 
-  <title>SoMe Styles | Single post</title>
+  <title>SoMe Styles | Edit post</title>
 </head>
 
 <body class="bg-primary">
@@ -34,14 +33,14 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Single post</h1>
+    <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Edit post</h1>
 
   </header>
 
   <main>
 
     <!-- posts section -->
-    <div id="post" class="container-fluid mb-5 mt-5">
+    <div class="container-fluid mb-5 mt-5" id="post">
       <div class="row">
         <div class="col-12 col-sm-4 mb-3">
           <div class="card pr-2 pl-2">
