fixed bottom style

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             </div>
           </div>
   </main>
-  <footer class="footer footer-expand fixed-bottom">
+  <footer class="footer footer-expand mt-4">
     <div class="container">
       <div class="d-flex justify-content-center align-items-center">
-        <p class="h6 text-primary my-5"> &copy; 2023 Boho Styles</p>
+        <p class="h6 text-primary"> &copy; 2023 Boho Styles</p>
       </div>
     </div>
   </footer>
