--- a/feed/index.html
+++ b/feed/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="SoMe Styles Feed " content="The feed page for SoMe Styles" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="../dist/css/index.css" />
   <script src="/scripts/posts/get.mjs" type="module" defer></script>
@@ -171,7 +172,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/content/createPost.html">
               <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
             </a>
           </li>
