--- a/content/editPost.html
+++ b/content/editPost.html
@@ -8,13 +8,11 @@
     <meta name="SoMe Styles edit posts " content="The user can create and edit content" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <script src="/scripts/handlers/createPost.mjs" type="module" defer></script>
+    <script src="/scripts/handlers/editPost.mjs" type="module" defer></script>
     <script src="/scripts/handlers/index.mjs" type="module" defer></script>
-    <script src="/scripts/posts/create.mjs" type="module" defer></script>
 
 
-
-    <title>SoMe Styles | Create post</title>
+    <title>SoMe Styles | Edit post</title>
 </head>
 
 <body>
@@ -60,14 +58,15 @@
                     </div>
                 </div>
 
-                <!-- create a post -->
+                <!-- update a post -->
                 <div class="container mt-5 mb-4">
                     <div class="row">
                         <div class="d-flex align-items-center justify-content-center">
-                            <h2>Create post</h2>
+                            <h2>Update post</h2>
                         </div>
 
-                        <form action="" id="createPost" method="POST" class="mx-3">
+                        <form id="editPost" class="mx-3">
+                            
                                 <label for="title" class="form-label"></label>
                                 <label for="title">Post Title</label>
                                 <input class="form-control border-dark" id="title" type="text" name="postTitle" required
@@ -75,8 +74,8 @@
 
                                 <div class="mb-3">
                                     <label for="body" class="form-label"></label>
-                                    <textarea class="form-control border-secondary" id="body" name="body" rows="3"
-                                        required placeholder="Write your post here..."></textarea>
+                                    <textarea class="form-control border-secondary" id="body" name="body" rows="3" required
+                                        placeholder="Write your post here..."></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="media" class="form-label"></label>
@@ -92,7 +91,7 @@
                                 <div class="d-grid gap-2 mb-2">
 
                                     <button class="btn btn-secondary" type="submit">
-                                        Create Post
+                                        Update Post
                                     </button>
                                 </div>
                             </form>
