--- a/single-post/index.html
+++ b/single-post/index.html
@@ -78,7 +78,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="/content/createPost.html">
                 <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
               </a>
             </li>
