added formData in postData

--- a/content/createPost.html
+++ b/content/createPost.html
@@ -70,7 +70,7 @@
                         <form action="" id="createPost" method="POST" class="mx-3">
                                 <label for="title" class="form-label"></label>
                                 <label for="title">Post Title</label>
-                                <input class="form-control border-dark" id="title" type="text" name="postTitle" required
+                                <input class="form-control border-dark" id="title" type="text" name="title" required
                                     placeholder="Post title..." maxlength="30"></input>
 
                                 <div class="mb-3">
