--- a/content/createPost.html
+++ b/content/createPost.html
@@ -67,8 +67,7 @@
                             <h2>Create post</h2>
                         </div>
 
-                        <form action="" id="createPost" method="POST" class="mx-3">
-                                <label for="title" class="form-label"></label>
+                        <form id="createPost" class="mx-3" method="POST" action="">
                                 <label for="title">Post Title</label>
                                 <input class="form-control border-dark" id="title" type="text" name="title" required
                                     placeholder="Post title..." maxlength="30"></input>
