update post success

--- a/content/createPost.html
+++ b/content/createPost.html
@@ -33,8 +33,7 @@
                         <a class="btn text-primary shadow-sm mx-1" href="/register/index.html"
                             role="button">Register</a>
                         <!-- Profile and Feed Button -->
-                        <a class="btn-profile btn btn-outline-light d-flex disabled shadow-sm" aria-disabled="true"
-                            role="button" data-bs-toggle="button">Profile</a>
+                        <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile/index.html" role="button">Profile</a>
 
                         <a class="btn btn-outline-primary shadow-sm mx-1" href="/feed" role="button">Feed</a>
                     </div>
