--- a/feed/index.html
+++ b/feed/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <!-- posts section -->
-  <div class="container-fluid mb-5 mt-5" id="post">
+  <div id="post" class="container-fluid mb-5 mt-5" >
     <div class="row">
       <div class="col-12 col-sm-4 mb-3">
         <div class="card pr-2 pl-2">
