--- a/content/deletePost.html
+++ b/content/deletePost.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="SoMe Styles edit posts " content="The user can create and edit content" />
+    <meta name="SoMe Styles delete posts " content="The user can delete content" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <script src="/scripts/handlers/editPost.mjs" type="module" defer></script>
+    <script src="/scripts/handlers/createPost.mjs" type="module" defer></script>
     <script src="/scripts/handlers/index.mjs" type="module" defer></script>
+    <script src="/scripts/posts/create.mjs" type="module" defer></script>
 
 
-    <title>SoMe Styles | Edit post</title>
+
+    <title>SoMe Styles | Delete post</title>
 </head>
 
 <body>
@@ -31,8 +33,8 @@
                         <a class="btn text-primary shadow-sm mx-1" href="/register/index.html"
                             role="button">Register</a>
                         <!-- Profile and Feed Button -->
-                        <a class="btn-profile btn btn-outline-light d-flex disabled shadow-sm" aria-disabled="true"
-                            role="button" data-bs-toggle="button">Profile</a>
+                        <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile/index.html"
+                            role="button">Profile</a>
 
                         <a class="btn btn-outline-primary shadow-sm mx-1" href="/feed" role="button">Feed</a>
                     </div>
@@ -58,18 +60,16 @@
                     </div>
                 </div>
 
-                <!-- update a post -->
+                <!-- create a post -->
                 <div class="container mt-5 mb-4">
                     <div class="row">
                         <div class="d-flex align-items-center justify-content-center">
-                            <h2>Update post</h2>
+                            <h2>Delete post</h2>
                         </div>
 
-                        <form id="editPost" class="mb-5">
-
-                            <label for="title" class="form-label"></label>
+                        <form id="createPost" class="mb-5" method="POST" action="">
                             <label for="title">Post Title</label>
-                            <input class="form-control border-dark" id="title" type="text" name="postTitle" required
+                            <input class="form-control border-dark" id="title" type="text" name="title" required
                                 placeholder="Post title..." maxlength="30"></input>
 
                             <div class="mb-3">
@@ -91,7 +91,7 @@
                             <div class="d-grid gap-2 mb-2">
 
                                 <button class="btn btn-secondary" type="submit">
-                                    Update Post
+                                    Delete Post
                                 </button>
                             </div>
                         </form>
